--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
     crossorigin=""/>
 </head>
 <body>
-    <div id="map" style="height: 180px;" ></div>
+    <div id="map" style="height: 500px;"></div>
 
+    <div>
+        
+        <h1 class="displayer">
+          
+        </h1>
+    </div>
 </body>
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
 integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
 crossorigin="">
 </script>
-   <script src="index.js"></script>
-
+<script src="distance.js"></script>
+<script src="index.js"></script>
 </html>
