--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
 crossorigin="">
 </script>
-<script src="distance.js"></script>
+<!-- <script src="distance.js"></script> -->
+<script src="creator.js"></script>
 <script src="index.js"></script>
 </html>
